--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
-0.0.0 2021-01-12  Tobias Bossert (tobias.bossert@fastpath.ch)
+0.1.0 2021-04-16  Tobias Bossert (bossert _at_ oetiker _this_is_a_dot_ ch)
+- Initial release
 
+0.0.0 2021-01-12  Tobias Bossert (bossert _at_ oetiker _this_is_a_dot_ ch)
 - started project
