--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wg-wrangler (0.1.3) unstable; urgency=medium
+
+   * package: store config in /etc/opt/wg-wrangler, made systemd-service configurable
+   * wg-wrangler: migrated value attributes to getAllFieldValues()
+
+   -- Tobias Bossert <bossert@oetiker.ch> Thu, 07 Apr 2021 13:37:02 +0200
+
 wg-wrangler (0.1.2) unstable; urgency=medium
 
    * package: added config options for the --listen argument
@@ -10,7 +17,7 @@ wg-wrangler (0.1.1) unstable; urgency=medium
    * Initial deb release
 
    -- Tobias Bossert <bossert@oetiker.ch> Thu, 30 Apr 2021 11:02:58 +0200
-   
+
 wg-wrangler (0.1.0) unstable; urgency=medium
 
    * Initial release
