Added ubuntu 22 build target, updated dependencies

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+wg-wrangler (0.2.1) unstable; urgency=medium
+
+   * updated: Build dependency node.js to 18 LTS (ubuntu 20+22) 16LTS (ubuntu 18)
+   * updated: Callbackery to 0.42.4
+   * updated: Added Ubuntu 22 as build target
+
+   -- Tobias Bossert <bossert@oetiker.ch> Fri, 25 Jul 2022 14:08:01 +0100
+
+
 wg-wrangler (0.2.0) unstable; urgency=medium
 
    * fixed: Validation on hidden field when adding a new peer
