--- a/debian/changelog
+++ b/debian/changelog
@@ -1,60 +1,1 @@
-wg-wrangler (0.2.3) unstable; urgency=medium
-
-   * Raised wg-meta version to 0.3.3 to fix deadlock when calling the reload callback
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 25 Dec 2022 11:35:59 +0100
-
-wg-wrangler (0.2.2) unstable; urgency=medium
-
-   * fixed ip suggestions
-
-   -- Tobias Bossert <bossert@oetiker.ch> Fri, 25 Nov 2022 20:57:23 +0100
-
-wg-wrangler (0.2.1) unstable; urgency=medium
-
-   * updated: Build dependency node.js to 18 LTS (ubuntu 20+22) 16LTS (ubuntu 18)
-   * updated: Callbackery to 0.42.4
-   * updated: Added Ubuntu 22 as build target
-
-   -- Tobias Bossert <bossert@oetiker.ch> Fri, 25 Jul 2022 14:08:01 +0100
-
-
-wg-wrangler (0.2.0) unstable; urgency=medium
-
-   * fixed: Validation on hidden field when adding a new peer
-   * fixed: Disabled Peer warning when editing a peer
-   * changed: lifted wg-meta compatibility to 0.3.x. This version may be incompatible to older (wg-meta) metadata! See changes of wg-meta
-
-   -- Tobias Bossert <bossert@oetiker.ch> Sun, 18 Jul 2021 13:48:02 +0200
-
-wg-wrangler (0.1.4) unstable; urgency=medium
-
-   * wg-wrangler: removed .pl extension from main "binary" (to make it compatible for apparmor profiles)
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 07 Apr 2021 15:59:06 +0200
-
-wg-wrangler (0.1.3) unstable; urgency=medium
-
-   * package: store config in /etc/opt/wg-wrangler, made systemd-service configurable
-   * wg-wrangler: migrated value attributes to getAllFieldValues()
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 07 Apr 2021 13:37:02 +0200
-
-wg-wrangler (0.1.2) unstable; urgency=medium
-
-   * package: added config options for the --listen argument
-   * development: Allow development without having wireguard installed
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 06 Apr 2021 15:56:58 +0200
-
-wg-wrangler (0.1.1) unstable; urgency=medium
-
-   * Initial deb release
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 30 Apr 2021 11:02:58 +0200
-
-wg-wrangler (0.1.0) unstable; urgency=medium
-
-   * Initial release
-
-   -- Tobias Bossert <bossert@oetiker.ch> Thu, 16 Apr 2021 09:02:58 +0200
+../CHANGES
